--- a/src/app/components/atoms/button/button.component.html
+++ b/src/app/components/atoms/button/button.component.html
@@ -1,3 +1,9 @@
-<button mat-button class="custom-button" [ngClass]="buttonClass">
+<button
+  mat-raised-button
+  [color]="color"
+  [disabled]="disabled"
+  (click)="onClick.emit()"
+  class="mat-raised-button"
+>
   <ng-content></ng-content>
 </button>
