--- a/src/app/components/atoms/button/button.component.scss
+++ b/src/app/components/atoms/button/button.component.scss
@@ -1,22 +1,9 @@
-.custom-button {
-  background-color: var(--primary-color);
-  color: var(--text-color);
-  font-weight: bold;
-  text-transform: uppercase;
-  border: none;
-  border-radius: 4px;
-  padding: 8px 16px;
-  transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
-
-  &.accent {
-    background-color: var(--accent-color);
-  }
-
-  &.secondary {
-    background-color: var(--secondary-color);
-  }
+button.mat-raised-button {
+  width: 100%;
+  margin-top: 16px;
+  font-size: 16px;
+}
+button.mat-raised-button:hover {
+  color: #f0f0f0;
+  background-color: var(--secondary-color);
 }
