--- a/src/app/components/organisms/header/header.component.scss
+++ b/src/app/components/organisms/header/header.component.scss
@@ -1,9 +1,12 @@
 .header {
+  display: flex;
   border-bottom: 4px solid var(--primary-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   justify-content: space-between;
 }
-
+.title {
+  margin-left: 1rem;
+}
 header {
   background-color: var(--background-color);
   color: var(--text-color);
@@ -18,9 +21,14 @@ header {
   color: var(--text-color);
   padding: 1rem;
   display: flex;
+  flex-grow: 1;
   justify-content: center;
+  text-align: center;
 }
 
+.button-disabled .sidebar {
+  justify-content: flex-start;
+}
 nav ul {
   display: flex;
   list-style-type: none;
@@ -43,9 +51,20 @@ button {
   background-color: var(--primary-color);
   width: 100px;
   border-radius: 4px;
+  margin-right: 1rem;
 }
 button:hover {
   background-color: var(--secondary-color);
   width: 100px;
   border-radius: 4px;
+}
+
+.login-options {
+  display: flex;
+  gap: 1rem;
+  margin-right: 1rem;
+}
+
+.login-options span {
+  cursor: pointer;
 }
