--- a/src/app/components/organisms/footer/footer.component.scss
+++ b/src/app/components/organisms/footer/footer.component.scss
@@ -6,5 +6,6 @@ footer {
   padding: 1rem;
   width: 100%;
   height: 40px;
-
+  border-top: 4px solid var(--primary-color);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
