--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,5 @@
 <section class="dashboard">
-  <app-summary-card></app-summary-card>
-  <app-charts></app-charts>
-  <app-dash-list [pessoas]="alunos"></app-dash-list>
-  <app-dash-list [pessoas]="professores" tipo="Professores"></app-dash-list>
+  <app-summary-card [dashboardRelatory]="dashboardRelatory"></app-summary-card>
+  <app-charts [dashboardRelatory]="dashboardRelatory"></app-charts>
+  <app-dash-list [dashboardRelatory]="dashboardRelatory"></app-dash-list>
 </section>
