--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,10 +1,10 @@
 .dashboard {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  background-color: var(--background-color);
+  background-color: var(--text-color);
   max-height: 80vh;
   max-width: 900vh;
 }
@@ -18,14 +18,11 @@
   grid-column: 1;
 
 }
-.alunos{
-  grid-row: 1;
-  grid-column: 2;
+.dashboard app-dash-list{
+ grid-row: 1 / span 2;
+grid-column: 2;
 }
-.professores{
-  grid-row: 2;
-  grid-column: 2;
-}
+
 
 :host{
   flex: 1;
