--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -23,6 +23,14 @@
 grid-column: 2;
 }
 
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100%;
+  font-size: 1.5em;
+  color: var(--primary-color);
+}
 
 :host{
   flex: 1;
