chore: ajustes layout e adicionado botao de adicionar na lista

--- a/src/app/components/atoms/button/button.component.scss
+++ b/src/app/components/atoms/button/button.component.scss
@@ -2,8 +2,10 @@ button.mat-raised-button {
   width: 100%;
   margin-top: 16px;
   font-size: 16px;
+  background-color: var(--secondary-color);
+  color: #fff;
 }
 button.mat-raised-button:hover {
   color: #f0f0f0;
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
 }
