--- a/src/app/components/organisms/course/course-list/course-list.component.scss
+++ b/src/app/components/organisms/course/course-list/course-list.component.scss
@@ -1,6 +1,14 @@
 .card{
   min-height: 100%;
+  mat-card-header{
+    display: flex;
+    flex-direction: column;
+  }
+  app-button{
+    width: 150px;
+  }
   mat-card-title{
     font-size: 32px;
+
   }
 }
