--- a/src/app/components/organisms/student/student-list/student-list.component.html
+++ b/src/app/components/organisms/student/student-list/student-list.component.html
@@ -1,6 +1,9 @@
 <mat-card class="card">
   <mat-card-header>
     <mat-card-title>Alunos</mat-card-title>
+    <app-button
+      ><span class="material-symbols-outlined"> add </span>Adicionar</app-button
+    >
   </mat-card-header>
   <mat-card-content>
     <app-itens-list
