--- a/src/app/components/organisms/student/student-list/student-list.component.scss
+++ b/src/app/components/organisms/student/student-list/student-list.component.scss
@@ -1,5 +1,12 @@
 .card{
   min-height: 100%;
+  mat-card-header{
+    display: flex;
+    flex-direction: column;
+  }
+  app-button{
+    width: 150px;
+  }
   mat-card-title{
     font-size: 32px;
   }
