--- a/src/app/components/atoms/item-details/item-details.component.html
+++ b/src/app/components/atoms/item-details/item-details.component.html
@@ -1,27 +1,21 @@
 <h3 mat-line>{{ item.name ? item.name : item.personData.name }}</h3>
 
 <!-- Campos específicos para cursos -->
-<span *ngIf="label === 'Pesquisar Curso'" mat-line
-  >Categoria: {{ item.category }}</span
->
-<span *ngIf="label === 'Pesquisar Curso'" mat-line
-  >Professor: {{ item.teacher }}</span
->
+<span *ngIf="type == 'course'" mat-line>Categoria: {{ item.category }}</span>
+<span *ngIf="type == 'course'" mat-line>Professor: {{ item.teacher }}</span>
 
 <!-- Campos específicos para alunos -->
-<span mat-line *ngIf="label === 'Pesquisar Aluno'"
-  >Matrícula: {{ item.enrollment }}</span
->
+<span mat-line *ngIf="type == 'student'">Matrícula: {{ item.enrollment }}</span>
 
 <!-- Campos específicos para professores -->
-<span mat-line *ngIf="label === 'Pesquisar Professor'"
+<span mat-line *ngIf="type == 'teacher'"
   >Especialização: {{ item.specialization }}</span
 >
-<span mat-line *ngIf="label === 'Pesquisar Professor'"
+<span mat-line *ngIf="type == 'teacher'"
   >Anos de Experiência: {{ item.experienceYears }}</span
 >
 
 <span mat-line *ngIf="item.createdAt"
   >Data de registro: {{ item.createdAt | date }}</span
 >
-<app-item-status [ativo]="item.ativo"></app-item-status>
+<app-item-status [ativo]="item.active"></app-item-status>
