--- a/src/app/components/organisms/student/student-list/student-list.component.html
+++ b/src/app/components/organisms/student/student-list/student-list.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card">
   <mat-card-header>
     <mat-card-title>Alunos</mat-card-title>
-    <app-button
+    <app-button routerLink="/student/new"
       ><span class="material-symbols-outlined"> add </span>Adicionar</app-button
     >
   </mat-card-header>
