--- a/src/app/components/organisms/course/course-list/course-list.component.html
+++ b/src/app/components/organisms/course/course-list/course-list.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card">
   <mat-card-header>
     <mat-card-title>Cursos</mat-card-title>
-    <app-button
+    <app-button routerLink="/course/new"
       ><span class="material-symbols-outlined"> add </span>Adicionar</app-button
     >
   </mat-card-header>
