--- a/src/app/pages/student/student-details-page/student-details-page.component.html
+++ b/src/app/pages/student/student-details-page/student-details-page.component.html
@@ -1,3 +1,3 @@
 <section class="student-page">
-  <app-student-detail></app-student-detail>
+  <app-student-details></app-student-details>
 </section>
