feat: integracao com a api

--- a/src/app/components/molecules/student/student-details-card/student-details-card.component.html
+++ b/src/app/components/molecules/student/student-details-card/student-details-card.component.html
@@ -54,7 +54,7 @@
     <button mat-raised-button color="primary" (click)="toggleEditing()">
       Editar
     </button>
-    <button mat-raised-button color="warn" (click)="deleteStudent()">
+    <button mat-raised-button color="warn" (click)="deletestudent()">
       Desativar
     </button>
   </div>
