--- a/src/app/components/molecules/course/course-form/course-form.component.html
+++ b/src/app/components/molecules/course/course-form/course-form.component.html
@@ -28,7 +28,7 @@
         ></app-input>
       </div>
 
-      <div class="form-group" *ngIf="!this.createCourse">
+      <div class="form-group">
         <span class="input-label">Ativo:</span>
         <app-input
           placeholder="Ativo"
