--- a/src/app/components/organisms/course/course-list/course-list.component.html
+++ b/src/app/components/organisms/course/course-list/course-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<mat-card class="card" *ngIf="courses">
   <mat-card-header>
     <mat-card-title>Cursos</mat-card-title>
     <app-button routerLink="/course/new"
@@ -6,11 +6,16 @@
     >
   </mat-card-header>
   <mat-card-content>
-    <app-itens-list
-      [items]="courses"
-      label="Pesquisar Curso"
-      (update)="onUpdate($event)"
-      (delete)="onDelete($event)"
-    ></app-itens-list>
+    <ng-container *ngIf="courses.length > 0; else loading">
+      <app-itens-list
+        [items]="courses"
+        label="Pesquisar Curso"
+        (update)="onUpdate($event)"
+        (delete)="onDelete($event)"
+      ></app-itens-list>
+    </ng-container>
+    <ng-template #loading>
+      <p>Carregando cursos...</p>
+    </ng-template>
   </mat-card-content>
 </mat-card>
