--- a/src/app/components/organisms/student/student-list/student-list.component.html
+++ b/src/app/components/organisms/student/student-list/student-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<mat-card class="card" *ngIf="students">
   <mat-card-header>
     <mat-card-title>Alunos</mat-card-title>
     <app-button routerLink="/student/new"
@@ -6,11 +6,16 @@
     >
   </mat-card-header>
   <mat-card-content>
-    <app-itens-list
-      [items]="students"
-      label="Pesquisar Aluno"
-      (update)="onUpdate($event)"
-      (delete)="onDelete($event)"
-    ></app-itens-list>
+    <ng-container *ngIf="students.length > 0; else loading">
+      <app-itens-list
+        [items]="students"
+        label="Pesquisar Aluno"
+        (update)="onUpdate($event)"
+        (delete)="onDelete($event)"
+      ></app-itens-list>
+    </ng-container>
+    <ng-template #loading>
+      <p>Carregando alunos...</p>
+    </ng-template>
   </mat-card-content>
 </mat-card>
