--- a/src/app/components/organisms/teacher/teacher-details/teacher-details.component.html
+++ b/src/app/components/organisms/teacher/teacher-details/teacher-details.component.html
@@ -1,9 +1,10 @@
-<section class="teacher-detail">
+<section class="teacher-detail" *ngIf="teacher || createTeacher">
   <app-teacher-details-card
     *ngIf="!createTeacher"
     [teacher]="teacher"
     [isEditing]="isEditing"
     (isEditingChange)="updateIsEditing($event)"
+    (deleteTeacher)="deleteTeacher($event)"
     class="teacher-detail-card"
   >
   </app-teacher-details-card>
