--- a/src/app/components/organisms/teacher/teacher-list/teacher-list.component.html
+++ b/src/app/components/organisms/teacher/teacher-list/teacher-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<mat-card class="card" *ngIf="teachers">
   <mat-card-header>
     <mat-card-title>Professores</mat-card-title>
     <app-button routerLink="/teacher/new"
@@ -6,11 +6,16 @@
     >
   </mat-card-header>
   <mat-card-content>
-    <app-itens-list
-      [items]="teachers"
-      label="Pesquisar Professor"
-      (update)="onUpdate($event)"
-      (delete)="onDelete($event)"
-    ></app-itens-list>
+    <ng-container *ngIf="teachers.length > 0; else loading">
+      <app-itens-list
+        [items]="teachers"
+        label="Pesquisar Professor"
+        (update)="onUpdate($event)"
+        (delete)="onDelete($event)"
+      ></app-itens-list>
+    </ng-container>
+    <ng-template #loading>
+      <p>Carregando professores...</p>
+    </ng-template>
   </mat-card-content>
 </mat-card>
