feat: adicionar/remover estudantes de um cursoo

--- a/src/app/components/atoms/button/button.component.html
+++ b/src/app/components/atoms/button/button.component.html
@@ -3,6 +3,7 @@
   [disabled]="disabled"
   (click)="onClick.emit()"
   class="mat-raised-button"
+  [class.red-button]="redColor"
 >
   <ng-content></ng-content>
 </button>
