--- a/src/app/components/molecules/itens-list/itens-list.component.scss
+++ b/src/app/components/molecules/itens-list/itens-list.component.scss
@@ -62,3 +62,10 @@ app-item-details{
   outline: none;
   border-color: var(--primary-color)
 }
+.list-item.selected {
+  background-color: lightblue;
+  &.redColor {
+    background-color: lightcoral;
+  }
+
+}
