--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
+<div *ngIf="!dashboardRelatory" class="overlay">
+  <div class="spinner">Carregando...</div>
+</div>
 <section *ngIf="dashboardRelatory" class="dashboard">
   <app-summary-card [dashboardRelatory]="dashboardRelatory"></app-summary-card>
   <app-charts [dashboardRelatory]="dashboardRelatory"></app-charts>
   <app-dash-list [dashboardRelatory]="dashboardRelatory"></app-dash-list>
 </section>
-
-<div *ngIf="!dashboardRelatory" class="loading">Loading...</div>
