--- a/src/app/components/molecules/course/course-form/course-form.component.scss
+++ b/src/app/components/molecules/course/course-form/course-form.component.scss
@@ -7,6 +7,8 @@
 .course-card{
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
+  height: 100%;
+  padding: 10px;
 }
 
 .course-form {
