--- a/src/app/components/organisms/course/course-details/course-details.component.scss
+++ b/src/app/components/organisms/course/course-details/course-details.component.scss
@@ -3,26 +3,35 @@
   height: 100%;
   width: 100%;
   justify-content: space-between;
-.course-detail-card{
-  max-height: 75vh;
+
+.course-detail-card, .all-students{
+
   width: 50%;
+  flex: 1;
 }
 
-  .course-form-card{
+.course-form-card{
     flex: 1;
     width: 50%;
   }
+
 .course-members{
   flex: 1;
   width: 50%;
-  display: flex;
-  flex-direction: column;
   .teacher{
     color: black;
     margin: 5px;
     padding: 5px;
-
   }
 }
-
+.all-students, .course-members{
+  display: flex;
+  flex-direction: column;
+}
+.add-buton{
+  min-width: 120px;
+  width: 150px;
+  align-self: flex-end;
+  margin-right: 80px;
+}
 }
